--- a/views/user/orderhistory.ejs
+++ b/views/user/orderhistory.ejs
@@ -24,6 +24,8 @@
             <div class="serial">#</div>
             <div class="country">Product</div>
             <div class="visit">Status</div>
+            <div class="visit">Payment</div>
+            <div class="visit">Amount</div>
             <div class="visit pl-4" >Action</div>
           </div>
           <% orders.forEach((order,index)=>{%>
@@ -33,6 +35,7 @@
                 <div class="country"><%= item.product.name %></div>
                 <div class="visit"><%= order.status  %></div>
                 <div class="visit"><%= order.payment  %></div>
+                <div class="visit"><%= order.billamount  %></div>
                 
                 <% if (order.status !='Canceled'){%>
                <input type="button" value="Cancel" id="<%= order.id %>"  class="genric-btn primary circle arrow cancelbtn"><span class="lnr lnr-arrow-right"></span>
