--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -96,7 +96,7 @@
                
                 <div>
                   <div class="card-header border-bottom d-flex">
-                    <h4>Daily Sales</h4><a href="/admin/btn_one" class="ps-5" id="btn_one">📄</a>
+                    <h4>Daily Sales</h4><div class="ps-5"><a href="/admin/btn_one"  id="btn_one">📄Download</a></div>
                   </div>
                   <canvas id="myChart"></canvas>
                 </div>
@@ -106,7 +106,7 @@
             <div class="col-lg-6 col-md-12">
               <div class="card shadow-0">
                 <div class="card-header border-bottom d-flex">
-                  <h4>Blocked users/Unblocked users</h4> <a href="/admin/btn_two" class="ps-5" id="btn_two">📄</a>
+                  <h4>Blocked users/Unblocked users</h4> <div class="ps-5"><a href="/admin/btn_two"  id="btn_two">📄Download</a></div>
                 </div>
                 <canvas id="chartTwo"></canvas>
 
