--- a/views/auth/forgotpass.ejs
+++ b/views/auth/forgotpass.ejs
@@ -49,23 +49,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>login/signup</title>
+  <link rel="stylesheet" href="/css/users/login.css">
+</head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>otp</title>
+    <title>forgot password</title>
     <link rel="stylesheet" href="/css/users/otp.css">
 </head>
 <body>
     
 
-<form action="/otpverification" method="post" autocomplete='off' class='form'>
+<form action="/forgotpassword" method="post" autocomplete='off' class='form'>
     <div class='control'>
       <h1>
-        OTP Verification
+        Forgot Password
       </h1>
     </div>
     <div class='control block-cube block-input'>
-      <input name='otp' placeholder='OTP' type='tel'>
+      <input name='email' placeholder='Email' type='email'>
       <div class='bg-top'>
         <div class='bg-inner'></div>
       </div>
@@ -77,6 +86,19 @@
       </div>
     </div>
     
+    <div class='control block-cube block-input'>
+      <input name='password' placeholder='Password' type='password'>
+      <div class='bg-top'>
+        <div class='bg-inner'></div>
+      </div>
+      <div class='bg-right'>
+        <div class='bg-inner'></div>
+      </div>
+      <div class='bg'>
+        <div class='bg-inner'></div>
+      </div>
+    </div>
+
     <button class='btn block-cube block-cube-hover' type='submit'>
       <div class='bg-top'>
         <div class='bg-inner'></div>
@@ -88,10 +110,10 @@
         <div class='bg-inner'></div>
       </div>
       <div class='text'>
-        Verify
+        Reset
       </div>
     </button>
-    <a class="p-5 text-white" href="" id="resend-otp"></a>
+   
     
   </form>
   <script src="/js/user/resendOtp.js"></script>
