--- a/views/auth/ForgotPassOtp.ejs
+++ b/views/auth/ForgotPassOtp.ejs
@@ -1,4 +1,3 @@
-
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -22,9 +21,9 @@
     <link rel="stylesheet" href="css/users/slick.css">
     <!-- style CSS -->
     <link rel="stylesheet" href="css/users/style.css">
-</head>
-
-<body>
+  </head>
+  
+  <body>
     <!--::header part start::-->
     <header class="main_menu home_menu">
         <div class="container">
@@ -37,7 +36,7 @@
                             aria-expanded="false" aria-label="Toggle navigation">
                             <span class="menu_icon"><i class="fas fa-bars"></i></span>
                         </button>
-
+  
                       
                        
                     </nav>
@@ -46,76 +45,56 @@
         </div>
        
     </header>
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login/signup</title>
-    <link rel="stylesheet" href="/css/users/login.css">
-</head>
-<body>
   
-    
-
-<form action="/logged" method="post" autocomplete='off' class='form'>
-    <div class='control'>
-      <h1>
-        Sign In/<a href="/signup">Sign Up</a>
-      </h1>
-    </div>
-    <div class='control block-cube block-input'>
-      <input name='email' placeholder='Email' type='text'>
-      <div class='bg-top'>
-        <div class='bg-inner'></div>
+  <!DOCTYPE html>
+  <html lang="en">
+  <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>otp</title>
+      <link rel="stylesheet" href="/css/users/otp.css">
+  </head>
+  <body>
+      
+  
+  <form action="/ForgotPassOtp" method="post" autocomplete='off' class='form'>
+      <div class='control'>
+        <h1>
+          OTP Verification
+        </h1>
       </div>
-      <div class='bg-right'>
-        <div class='bg-inner'></div>
+      <div class='control block-cube block-input'>
+        <input name='otp' placeholder='OTP' type='tel'>
+        <div class='bg-top'>
+          <div class='bg-inner'></div>
+        </div>
+        <div class='bg-right'>
+          <div class='bg-inner'></div>
+        </div>
+        <div class='bg'>
+          <div class='bg-inner'></div>
+        </div>
       </div>
-      <div class='bg'>
-        <div class='bg-inner'></div>
-      </div>
-    </div>
-    <div class='control block-cube block-input'>
-      <input name='password' placeholder='Password' type='password'>
-      <div class='bg-top'>
-        <div class='bg-inner'></div>
-      </div>
-      <div class='bg-right'>
-        <div class='bg-inner'></div>
-      </div>
-      <div class='bg'>
-        <div class='bg-inner'></div>
-      </div>
-    </div>
-
-   
-    <button class='btn block-cube block-cube-hover' type='submit'>
-      <div class='bg-top'>
-        <div class='bg-inner'></div>
-      </div>
-      <div class='bg-right'>
-        <div class='bg-inner'></div>
-      </div>
-      <div class='bg'>
-        <div class='bg-inner'></div>
-      </div>
-      <div class='text' >
-        Log In
-      </div>
-    </button>  
-   
-    <a href="/forgotpass" class='text' >
-      Forgot Password
-    </a>
-    <% if(loggedIn=false){ %>
-      <div >Login Failed</div>
-      <% } %>  
-  </form>
-</body>
-</html>
-
-
-
+      
+      <button class='btn block-cube block-cube-hover' type='submit'>
+        <div class='bg-top'>
+          <div class='bg-inner'></div>
+        </div>
+        <div class='bg-right'>
+          <div class='bg-inner'></div>
+        </div>
+        <div class='bg'>
+          <div class='bg-inner'></div>
+        </div>
+        <div class='text'>
+          Verify
+        </div>
+      </button>
+      <a class="p-5 text-white" href="" id="resend-otp"></a>
+      
+    </form>
+    <script src="/js/user/resendOtp.js"></script>
+  </body>
+  </html>
+  
