--- a/views/index.ejs
+++ b/views/index.ejs
@@ -231,10 +231,10 @@
                     <div class="single_footer_part">
                         <h4>Top Products</h4>
                         <ul class="list-unstyled">
-                            <li><a href="">Managed Website</a></li>
-                            <li><a href="">Manage Reputation</a></li>
-                            <li><a href="">Power Tools</a></li>
-                            <li><a href="">Marketing Service</a></li>
+                            <li><a >Managed Website</a></li>
+                            <li><a >Manage Reputation</a></li>
+                            <li><a >Power Tools</a></li>
+                            <li><a >Marketing Service</a></li>
                         </ul>
                     </div>
                 </div>
@@ -242,10 +242,10 @@
                     <div class="single_footer_part">
                         <h4>Quick Links</h4>
                         <ul class="list-unstyled">
-                            <li><a href="">Jobs</a></li>
-                            <li><a href="">Brand Assets</a></li>
-                            <li><a href="">Investor Relations</a></li>
-                            <li><a href="">Terms of Service</a></li>
+                            <li><a >Jobs</a></li>
+                            <li><a >Brand Assets</a></li>
+                            <li><a >Investor Relations</a></li>
+                            <li><a >Terms of Service</a></li>
                         </ul>
                     </div>
                 </div>
@@ -253,10 +253,10 @@
                     <div class="single_footer_part">
                         <h4>Features</h4>
                         <ul class="list-unstyled">
-                            <li><a href="">Jobs</a></li>
-                            <li><a href="">Brand Assets</a></li>
-                            <li><a href="">Investor Relations</a></li>
-                            <li><a href="">Terms of Service</a></li>
+                            <li><a >Jobs</a></li>
+                            <li><a >Brand Assets</a></li>
+                            <li><a >Investor Relations</a></li>
+                            <li><a >Terms of Service</a></li>
                         </ul>
                     </div>
                 </div>
@@ -264,17 +264,17 @@
                     <div class="single_footer_part">
                         <h4>Resources</h4>
                         <ul class="list-unstyled">
-                            <li><a href="">Guides</a></li>
-                            <li><a href="">Research</a></li>
-                            <li><a href="">Experts</a></li>
-                            <li><a href="">Agencies</a></li>
+                            <li><a >Guides</a></li>
+                            <li><a >Research</a></li>
+                            <li><a >Experts</a></li>
+                            <li><a >Agencies</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4">
                     <div class="single_footer_part">
                         <h4>Newsletter</h4>
-                        <p>Heaven fruitful doesn't over lesser in days. Appear creeping
+                        <p>Games
                         </p>
                         <div id="mc_embed_signup">
                             <form target="_blank"
@@ -299,19 +299,12 @@
                     <div class="col-lg-8">
                         <div class="copyright_text">
                             <P><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with  by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></P>
                         </div>
                     </div>
                     <div class="col-lg-4">
-                        <div class="footer_icon social_icon">
-                            <ul class="list-unstyled">
-                                <li><a href="#" class="single_social_icon"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="#" class="single_social_icon"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#" class="single_social_icon"><i class="fas fa-globe"></i></a></li>
-                                <li><a href="#" class="single_social_icon"><i class="fab fa-behance"></i></a></li>
-                            </ul>
-                        </div>
+                       
                     </div>
                 </div>
             </div>
