--- a/views/layouts/user/user-footer.ejs
+++ b/views/layouts/user/user-footer.ejs
@@ -6,10 +6,10 @@
                 <div class="single_footer_part">
                     <h4>Top Products</h4>
                     <ul class="list-unstyled">
-                        <li><a >Managed Website</a></li>
-                        <li><a >Manage Reputation</a></li>
-                        <li><a >Power Tools</a></li>
-                        <li><a >Marketing Service</a></li>
+                        <li>Managed Website</li>
+                        <li>Manage Reputation</li>
+                        <li>Power Tools</li>
+                        <li>Marketing Service</li>
                     </ul>
                 </div>
             </div>
@@ -17,10 +17,10 @@
                 <div class="single_footer_part">
                     <h4>Quick Links</h4>
                     <ul class="list-unstyled">
-                        <li><a >Jobs</a></li>
-                        <li><a >Brand Assets</a></li>
-                        <li><a >Investor Relations</a></li>
-                        <li><a >Terms of Service</a></li>
+                        <li>Jobs</li>
+                        <li>Brand Assets</li>
+                        <li>Investor Relations</li>
+                        <li>Terms of Service</li>
                     </ul>
                 </div>
             </div>
@@ -28,10 +28,10 @@
                 <div class="single_footer_part">
                     <h4>Features</h4>
                     <ul class="list-unstyled">
-                        <li><a >Jobs</a></li>
-                        <li><a >Brand Assets</a></li>
-                        <li><a >Investor Relations</a></li>
-                        <li><a >Terms of Service</a></li>
+                        <li>Jobs</li>
+                        <li>Brand Assets</li>
+                        <li>Investor Relations</li>
+                        <li>Terms of Service</li>
                     </ul>
                 </div>
             </div>
@@ -39,10 +39,10 @@
                 <div class="single_footer_part">
                     <h4>Resources</h4>
                     <ul class="list-unstyled">
-                        <li><a >Guides</a></li>
-                        <li><a >Research</a></li>
-                        <li><a >Experts</a></li>
-                        <li><a >Agencies</a></li>
+                        <li>Guides</li>
+                        <li>Research</li>
+                        <li>Experts</li>
+                        <li>Agencies</li>
                     </ul>
                 </div>
             </div>
