--- a/views/admin/addProduct-Form.ejs
+++ b/views/admin/addProduct-Form.ejs
@@ -51,7 +51,7 @@
               </div>
               <div class="input-container d-flex flex-column col-5 py-1">
                 <label for="productImage" class="text-black fw-bold fs-5 py-1">Product Image</label>
-                <input type="file" multiple id="productImage" name="productImage" class="rounded border-0 py-2 px-2" required>
+                <input type="file" accept=".jpeg, .png, .jpg" multiple id="productImage" name="productImage" class="rounded border-0 py-2 px-2" required>
               </div>
               <%if (typeof err!="undefined" && err) {%>
                   <p class="text-danger text-center"><%=err%></p>
