--- a/views/admin/bannermanagement.ejs
+++ b/views/admin/bannermanagement.ejs
@@ -43,7 +43,7 @@
                             <td><%-banner.bannerName %> </td>
                             <td><%-banner.description %> </td>
                             <td><%-banner.action %></td>
-                            <td><img src="/uploads/banner/<%=banner.image %>" width="50px"> </td>
+                            <td><img src="<%=banner.image %>" width="50px"> </td>
                          <td>
                                 <form action="/admin/deletebanner/<%=banner._id %>" method="post">
                                   <button type="submit" class="btn btn-link2" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Delete"  >🗑️</button></form>
