--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -45,7 +45,7 @@
                         <div class="media">
                           <div class="d-flex">
                             <img
-                              src="/uploads/product/<%= product.product.category %>/<%= product.product.productImage %>"
+                              src="<%= product.product.productImage %>"
                               width="150px" alt="">
 
                           </div>
