--- a/views/user/single-product.ejs
+++ b/views/user/single-product.ejs
@@ -28,7 +28,7 @@
            
             <div id="vertical">
               <div data-thumb="img/product/single-product/product_1.png">
-                <img src="/uploads/product/<%= product.category %>/<%=product.productImage %>" alt="">
+                <img src="<%=product.productImage %>" alt="">
               </div>
               
             </div>
